added water class

--- a/Group38_InformaticsGroupProject/Group38_InformaticsGroupProject.vbproj
+++ b/Group38_InformaticsGroupProject/Group38_InformaticsGroupProject.vbproj
@@ -97,6 +97,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Tree.vb" />
+    <Compile Include="Water.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
